--- a/css/biographie.css
+++ b/css/biographie.css
@@ -88,7 +88,7 @@ body {
     margin: 0;
 }
 
-/* Responsive styles */
+/* Style responsive */
 @media screen and (width < 1200px) {
     .presentation-box, .section-container, .content-box {
         width: 100%;
