--- a/css/contact.css
+++ b/css/contact.css
@@ -75,3 +75,28 @@ body {
 .contact-info ul li a:hover {
     text-decoration: underline;
 }
+
+/* Style responsive */
+@media screen and (width < 1000px) {
+    .contact-image img {
+        width: 300px;
+        border-radius: 8px;
+    }
+}
+
+@media screen and (width < 800px) {
+    .contact-content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .contact-image img {
+        width: 250px;
+        margin-bottom: 20px;
+    }
+
+    .contact-info {
+        padding: 10px;
+    }
+}
