Revert "Test de l'affichage de l'accueil pour téléphone."
This reverts commit 5958d93fa4b7d692152a1326eedcaa9347424e09.

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -100,7 +100,7 @@ body {
 }
 
 /* Style responsive */
-@media screen and (width < 1300px) {
+@media screen and (max-width: 1300px) {
     .home-content {
         display: flex;
         flex-direction: column;
