--- a/css/parametresAccessibilite.css
+++ b/css/parametresAccessibilite.css
@@ -11,13 +11,13 @@
 }
 
 .contenantParametreAccessibilite p {
-    font-size: 1.2rem;
+    font-size: 20px;
 }
 
 .contenantParametreAccessibilite button {
     margin: 5px;
     padding: 10px 20px;
-    font-size: 1rem;
+    font-size: 20px;
     cursor: pointer;
 }
 
