--- a/css/contact.css
+++ b/css/contact.css
@@ -27,7 +27,7 @@ body {
 }
 
 .contact-image img {
-    width: 350px;
+    width: 100%;
     border-radius: 8px;
 }
 
@@ -76,23 +76,11 @@ body {
 }
 
 /* Style responsive */
-@media screen and (width < 1000px) {
-    .contact-image img {
-        width: 300px;
-        border-radius: 8px;
-    }
-}
-
 @media screen and (width < 800px) {
     .contact-content {
         flex-direction: column;
         align-items: center;
         text-align: center;
-    }
-
-    .contact-image img {
-        width: 250px;
-        margin-bottom: 20px;
     }
 
     .contact-info {
