--- a/css/barreNavigation.css
+++ b/css/barreNavigation.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @font-face {
     font-family: 'dyslexic-font';
-    src: url('../fonts/OpenDyslexic-Regular.otf') format('opentype');
+    src: url('../fonts/OpenDyslexicAlta-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
-* {
+body.dyslexia-mode {
+    font-family: 'dyslexic-font', Arial, sans-serif;
+}
+*,
+*:before,
+*:after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
