--- a/css/biographie.css
+++ b/css/biographie.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'dyslexic-font';
+    src: url('../fonts/OpenDyslexicAlta-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body.dyslexia-mode {
+    font-family: 'dyslexic-font', Arial, sans-serif;
+}
+
 body {
     background: #FFDAB9;
     color: #333333;
