--- a/css/accueil.css
+++ b/css/accueil.css
@@ -1,6 +1,6 @@
 body {
-    background: #FFDAB9;
-    color: #333333;
+    background: var(--color-secondary);
+    color: var(--color-text-principal);
     margin: 0;
     padding: 0;
 }
@@ -19,14 +19,14 @@ body {
     position: relative;
     font-size: 62px;
     font-weight: 700;
-    color: #333333;
+    color: var(--color-text-principal);
 }
 
 .home-content h3 {
     position: relative;
     font-size: 36px;
     font-weight: 700;
-    color: #333;
+    color: var(--color-text-principal);
     line-height: 1.2;
 }
 
@@ -34,7 +34,7 @@ body {
     position: relative;
     font-size: 20px;
     margin: 20px 0 40px;
-    color: #333;
+    color: var(--color-text-principal);
 }
 
 .home-content #portrait {
@@ -54,7 +54,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #FFDAB9;
+    background: var(--color-secondary);
     animation: showRight 1.2s ease forwards;
 }
 
@@ -65,7 +65,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #FFDAB9;
+    background: var(--color-secondary);
     animation: showRight 1.2s ease forwards;
 }
 
@@ -76,7 +76,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #FFDAB9;
+    background: var(--color-secondary);
     animation: showRight 3s ease forwards;
 }
 
@@ -87,7 +87,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #FFDAB9;
+    background: var(--color-secondary);
     animation: showRight 1.2s ease forwards;
 }
 
