--- a/css/biographie.css
+++ b/css/biographie.css
@@ -1,6 +1,6 @@
 body {
-    background: #FFDAB9;
-    color: #333333;
+    background: var(--color-secondary);
+    color: var(--color-text-principal);
     margin: 0;
     padding: 0;
 }
@@ -14,8 +14,8 @@ body {
 }
 
 .presentation-box, .content-box {
-    background-color: #FFE4C4;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: var(--color-primary);
+    box-shadow: 0 4px 8px var(--color-box-shadow);
     overflow: hidden;
     border-radius: 10px;
     margin: 10px;
@@ -40,7 +40,7 @@ body {
     max-width: 600px;
     margin: 0 auto;
     line-height: 1.6;
-    color: #333;
+    color: var(--color-text-principal);
 }
 
 .content-box {
@@ -59,7 +59,7 @@ body {
 .content-box h2 {
     font-size: 36px;
     margin-bottom: 20px;
-    color: #333;
+    color: var(--color-text-principal);
     text-align: center;
 }
 
@@ -75,19 +75,19 @@ body {
 .timeline h3 {
     font-size: 20px;
     margin: 0 0 5px 0;
-    color: #333333;
+    color: var(--color-text-principal);
 }
 
 .timeline span {
     font-size: 16px;
-    color: #666;
+    color: var(--color-text-light-principal);
     display: block;
     margin-bottom: 5px;
 }
 
 .timeline p {
     font-size: 18px;
-    color: #333;
+    color: var(--color-text-principal);
     margin: 0;
 }
 
