--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 body {
-    background: #FFDAB9;
-    color: #333333;
+    background: var(--color-secondary);
+    color: var(--color-text-principal);
     margin: 0;
     padding: 0;
 }
@@ -16,7 +16,7 @@ body {
     display: flex;
     max-width: 1000px;
     margin: 0 auto;
-    background-color: #FFE4C4;
+    background-color: var(--color-primary);
     border-radius: 10px;
     padding: 10px;
 }
@@ -67,7 +67,7 @@ body {
 }
 
 .contact-info ul li a {
-    color: #333333;
+    color: var(--color-text-principal);
     text-decoration: none;
 }
 
