--- a/css/parametresAccessibilite.css
+++ b/css/parametresAccessibilite.css
@@ -1,6 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: var(--color-secondary);
     color: #333;
     margin: 0;
     padding: 0;
@@ -11,10 +10,10 @@ body {
 }
 
 #accessibility-settings {
-    background-color: #fff;
+    background-color: var(--color-primary);
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px var(--color-box-shadow);
     margin-top: 150px;
 }
 
@@ -30,4 +29,13 @@ label {
 input[type="checkbox"],
 select {
     margin-bottom: 16px;
+}
+
+
+.hide {
+    display: none;
+}
+
+.discover {
+    display: initial;
 }
