--- a/css/projetsPersonnels.css
+++ b/css/projetsPersonnels.css
@@ -1,12 +1,12 @@
 body {
-    background: #FFDAB9;
+    background: var(--color-secondary);
     color: #333333;
     margin: 0;
     padding: 0;
 }
 
 #presentation-content {
-    background: #FFE4C4;
+    background: var(--color-primary);
     margin-left: 10%;
     margin-right: 10%;
     border-radius: 10px;
@@ -39,7 +39,6 @@ h1 {
 .photo {
     width: 250px;
     height: 250px;
-    background-color: #ffffff;
     margin-bottom: 10px;
     border-radius: 10px;
 }
